--- a/wp-content/themes/short-film/assets/short-film_less/global/grid-blocks.less
+++ b/wp-content/themes/short-film/assets/short-film_less/global/grid-blocks.less
@@ -83,9 +83,16 @@
 //        width: auto;
         min-width: 100%;
         min-height: 100%;
-        @media screen and (max-width: 991px) {
+
+        @media screen and (max-width: 1199px) { //was 991px
             width: auto;
             height: 100%;
+            left: 50%;
+            -webkit-transform: translateX(-50%);
+            -moz-transform: translateX(-50%);
+            -o-transform: translateX(-50%);
+            -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
         }
     }
 }
